--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReportsWizard/OfferLogo.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReportsWizard/OfferLogo.cshtml
@@ -8,7 +8,7 @@
 First Step: <b>Upload logo for offer</b>
 
 @{
-    ViewBag.FromWizard = true;
+    ViewBag.InWizard = true;
 }
 <table><tr><td>
 @Html.Partial("../Offers/EditLogo", Model.Offer)
