--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/ChooseCampaign.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/ChooseCampaign.cshtml
@@ -21,6 +21,7 @@ Choose the Affiliate/Campaign...
 
 @using (Ajax.BeginForm("ChooseCampaign", ajaxOpts_post))
 {
+    @Html.HiddenFor(m => m.FromReportWizard)
     <table>
     <tr>
         <td>Affiliate | Campaign</td>
