--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/CreativeThumbnail.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/CreativeThumbnail.cshtml
@@ -8,7 +8,7 @@
 <b>Upload creative thumbnail</b>
 
 @{
-    ViewBag.FromWizard = true;
+    ViewBag.InWizard = true;
 }
 <table><tr><td>
 @Html.Partial("../Creatives/EditThumbnail", Model.Creative)
