--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/FinalReviewEdit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/FinalReviewEdit.cshtml
@@ -7,7 +7,7 @@ Last Step: <b>Final Review - Edit</b>
 
 @{
     ViewBag.FormAction = "FinalReviewEdit";
-    ViewBag.FromWizard = true;
+    ViewBag.InWizard = true;
     ViewBag.AllowChangeCreative = false;
 }
 @Html.Partial("../CampaignDrops/Edit", Model.CampaignDrop)
