--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
@@ -1,17 +1,17 @@
 ﻿@model ClientPortal.Data.Contexts.CPMReport
 @{
     var ajaxOptions = RazorHelpers.GetAjaxOptions("cpmReportsTab");
-    var ajaxOpts_Test = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Get", "This will email the report without setting 'Date Sent'. Continue?");
+    var ajaxOpts_Test = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Get", "This will email the report to the Recipient(s) (and CC) without setting 'Date Sent'. Continue?");
     var ajaxOpts_Send = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Get", "This will freeze the stats within the report. Send Report now?");
     var ajaxOpts_Confirm = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Get", "Are you sure you want to remove this drop from the report?");
     var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Post");
     bool reportSent = Model.DateSent != null;
 
-    bool fromWizard = ViewBag.FromWizard ?? false;
+    bool inWizard = ViewBag.InWizard ?? false;
     bool showReportDetails = ViewBag.ShowReportDetails ?? true;
 }
 
-@if (!fromWizard)
+@if (!inWizard)
 {
     if (!IsAjax)
     {
@@ -25,7 +25,7 @@
         @Ajax.ActionLink("Edit", "Edit", "CPMReports", new { id = Model.CPMReportId }, ajaxOptions)<text> | </text>
     }
     @Html.ActionLink("Preview", "PreviewEmail", "CPMReports", new { id = Model.CPMReportId }, new { target = "_blank" })<text> | </text>
-    @Ajax.ActionLink("Test Report", "Send", "CPMReports", new { id = Model.CPMReportId, test = true }, ajaxOpts_Test)<text> | </text>
+    @Ajax.ActionLink("Send Test Email", "Send", "CPMReports", new { id = Model.CPMReportId, test = true }, ajaxOpts_Test)<text> | </text>
     if (!reportSent)
     {
         @Ajax.ActionLink("Send Report", "Send", "CPMReports", new { id = Model.CPMReportId }, ajaxOpts_Send)<text> | </text>
