--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/FinalReview.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDropsWizard/FinalReview.cshtml
@@ -14,12 +14,17 @@ Review the stats for the drop and make any adjustments as needed.
 You can also <i>add a thumbnail</i> for the first creative.
 <br /><br />
 
-When done, continue to:
-@Ajax.ActionLink("Report Wizard - Review Drops", "Show", "CPMReportsWizard", new { offerid = Model.CampaignDrop.Campaign.OfferId, step = (int)ClientPortal.Web.Areas.Admin.Models.CPMReportWizardVM.WizardStep.ReviewDrops }, ajaxOpts_Report)
-@*
-<br />Or return to:
-@Ajax.ActionLink("Offer Summary (" + Model.CampaignDrop.Campaign.OfferId + ")", "Show", "Offers", new { id = Model.CampaignDrop.Campaign.OfferId }, ajaxOpts_Sum)
-*@
+@if (Model.FromReportWizard)
+{
+    <text>When done, continue to:</text>
+    @Ajax.ActionLink("Report Wizard - Review Drops", "Show", "CPMReportsWizard", new { offerid = Model.CampaignDrop.Campaign.OfferId, step = (int)ClientPortal.Web.Areas.Admin.Models.CPMReportWizardVM.WizardStep.ReviewDrops }, ajaxOpts_Report)
+} else {
+    <text>When done, return to:</text>
+    @Ajax.ActionLink("Offer Summary (" + Model.CampaignDrop.Campaign.OfferId + ")", "Show", "Offers", new { id = Model.CampaignDrop.Campaign.OfferId }, ajaxOpts_Sum)
+    <br />
+    <text>Or:</text>
+    @Ajax.ActionLink("Create another drop", "Show", new { offerid = Model.CampaignDrop.Campaign.OfferId }, ajaxOptions)
+}
 <br /><br />
 
 To edit, switch to:
