cpm- more cleanup

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Index.cshtml
@@ -4,7 +4,9 @@
     var ajaxOpts_Confirm = RazorHelpers.GetAjaxOptions("cpmSummaryTab", null, "Get", "Are you sure you want to delete this report?");
 }
 
-CPM Reports:
+CPM Reports:<br />
+@if (Model.Any())
+{
 <table border="1">
     <tr>
         <th>Name</th>
@@ -30,3 +32,4 @@ CPM Reports:
     </tr>
 }
 </table>
+}
