--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
@@ -7,6 +7,8 @@
 }
 
 @title<br />
+@if (Model.Any())
+{
 <table border="1">
     <tr>
         <th>List</th>
@@ -61,3 +63,4 @@
     }
 }
 </table>
+}
